feat(Campaign): Add campaign and main page
